--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -14,7 +14,19 @@ body {
 
 h1 {
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+  color: #fff;
+  /* text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #00736e, 0 0 20px #0073e6,
+    0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6; */
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 5rem;
+  color: #fff;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 10px #00736e, 0 0 15px #0073e6,
+    0 0 15px #0073e6;
+  font-family: "Merriweather", serif;
 }
 
 input[type="text"] {
@@ -22,20 +34,26 @@ input[type="text"] {
   padding: 10px;
   font-size: 16px;
   border-radius: 5px 0 0 5px;
+  background-color: #6f6d6d;
+  color: rgb(233, 237, 240);
 }
 
 .search-container {
   display: flex;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 }
 
 .search-container input[type="text"] {
   flex: 1;
 }
 
+::placeholder {
+  color: white;
+}
+
 .search-container button {
   padding: 10px 20px;
-  background-color: #4caf50;
+  background-color: #38e9eca7;
   border: none;
   color: white;
   cursor: pointer;
