--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,7 +1,15 @@
 @charset "utf-8";
 
+:root {
+  --color-1: #186cb8;
+  --color-2: #2a9a9f;
+  --color-3: #f98d00;
+  --color-4: #e83611;
+  --color-5: #f1b211;
+}
+
 body {
-  background-color: #111;
+  background-color: #3c3939e9;
   color: #fff;
   font-family: Arial, sans-serif;
 }
@@ -13,11 +21,35 @@ body {
 }
 
 h1 {
+  color: transparent;
+  /* text-shadow: 0px 0px 0px #7474748c; */
+  font-family: sans-serif;
+  font-size: 100px;
+  font-weight: 900;
   text-align: center;
-  margin-bottom: 2rem;
-  color: #fff;
-  /* text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #00736e, 0 0 20px #0073e6,
-    0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6; */
+  width: min-content;
+  margin: auto;
+  text-transform: uppercase;
+  background: linear-gradient(
+    220deg,
+    var(--color-1) 19%,
+    transparent 19%,
+    transparent 20%,
+    var(--color-2) 20%,
+    var(--color-2) 39%,
+    transparent 39%,
+    transparent 40%,
+    var(--color-3) 40%,
+    var(--color-3) 59%,
+    transparent 59%,
+    transparent 60%,
+    var(--color-4) 60%,
+    var(--color-4) 79%,
+    transparent 79%,
+    transparent 80%,
+    var(--color-5) 80%
+  );
+  -webkit-background-clip: text;
 }
 
 h2 {
@@ -74,10 +106,15 @@ input[type="text"] {
   margin-right: 20px;
 }
 
-.release-duration,
+.year-duration,
 .genres {
   color: rgba(255, 255, 255, 0.55);
   font-weight: 500;
+  margin-top: 10px;
+}
+
+.year-duration i {
+  margin: 1em;
 }
 
 .description {
@@ -91,7 +128,7 @@ input[type="text"] {
 
 .genres span {
   padding: 3px 15px;
-  background-color: rgb(255 255 255 / 0.05);
-  border: 0.5px solid rgb(255 255 255 / 0.15);
+  background-color: rgba(250, 214, 214, 0.05);
+  border: 0.5px solid rgb(254, 244, 244);
   border-radius: 50px;
 }
